Update text for projects

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
               <img src="./images/responsive-website.jpeg" alt="project image" />
             </div>
             <h3 class="project__title">Online Shopping</h3>
-            <p class="project__description">First project</p>
+            <p class="project__description">
+              Responsive website made of HTML and CSS
+            </p>
             <a
               class="project__link"
               href="https://goofy-murdock-a8cd13.netlify.app"
@@ -67,7 +69,7 @@
               <img src="./images/chatbot.png" alt="project image" />
             </div>
             <h3 class="project__title">Coffee Chatbot</h3>
-            <p class="project__description">Coffee Chatbot</p>
+            <p class="project__description">Chatbot made of JavaScript only</p>
             <a
               class="project__link"
               href="https://reverent-bell-fa5d38.netlify.app"
@@ -80,7 +82,10 @@
               <img src="./images/reservationizer.jpeg" alt="project image" />
             </div>
             <h3 class="project__title">Reservationizr</h3>
-            <p class="project__description">Third project</p>
+            <p class="project__description">
+              Website to make reservation to restaurants <br />
+              Made of React, Node/Express + MongoDB
+            </p>
             <a
               class="project__link"
               href="https://priceless-minsky-ec98b8.netlify.app"
