Update navbar to toggle in small screen

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       src="https://kit.fontawesome.com/fe3cdc0ee7.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./main.js" defer></script>
     <title>Minjae Chang | Web Developer</title>
   </head>
   <body>
@@ -34,6 +35,7 @@
             <a href="#contact"> Contact</a>
           </li>
         </ul>
+        <span class="navbar__toggle-btn"><i class="fas fa-bars"></i></span>
       </navbar>
 
       <!-- introduction -->
