Fix the  navbar scrolling

--- a/public/index.html
+++ b/public/index.html
@@ -25,15 +25,9 @@
       <navbar class="navbar">
         <h4 class="logo">minjae</h4>
         <ul class="navbar__menu">
-          <li class="navbar__item">
-            <a href="#about">About</a>
-          </li>
-          <li class="navbar__item">
-            <a href="#projects">Featured</a>
-          </li>
-          <li class="navbar__item">
-            <a href="#contact"> Contact</a>
-          </li>
+          <li class="navbar__item" data-link="#about">About</li>
+          <li class="navbar__item" data-link="#works">Featured</li>
+          <li class="navbar__item" data-link="#contact">Contact</li>
         </ul>
         <span class="navbar__toggle-btn"><i class="fas fa-bars"></i></span>
       </navbar>
@@ -48,7 +42,7 @@
       </section>
 
       <!-- projects -->
-      <section id="projects" class="projects">
+      <section id="works" class="projects">
         <h2 class="projects__msg">These are some of my featured projects</h2>
         <div class="projects__list">
           <div class="project">
